--- a/QuantumultX/rewrite/bilibili.conf
+++ b/QuantumultX/rewrite/bilibili.conf
@@ -13,6 +13,8 @@ hostname = *.bilibili.com, api.live.bilibili.com, api.vc.bilibili.com, grpc.bili
 ^https:\/\/app\.bilibili\.com\/x\/(v2\/(splash\/(list|show)|feed\/index\?)|resource\/show\/tab\/v2) url script-response-body https://raw.githubusercontent.com/app2smile/rules/master/js/bilibili-json.js
 # ～ BiliBili_哔哩哔哩_视频播放页面(up主推荐广告,相关推荐广告)@app2smile
 ^https:\/\/app\.bilibili\.com\/bilibili\.app\.(view\.v1\.View\/View|dynamic\.v2\.Dynamic\/DynAll)$ url script-response-body https://raw.githubusercontent.com/app2smile/rules/master/js/bilibili-proto.js
+# ～ BiliBili_哔哩哔哩_推荐去广告@ddgksf2013
+^https?:\/\/app\.bilibili\.com\/x\/v2\/feed\/index url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Script/bilibili_json.js
 # ～ BiliBili_哔哩哔哩_追番去广告@ddgksf2013
 ^https?:\/\/api\.bilibili\.com\/pgc\/page\/bangumi url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Script/bilibili_json.js
 # ～ BiliBili_哔哩哔哩_直播去广告@bm7
