--- a/QuantumultX/rewrite/YouTube.conf
+++ b/QuantumultX/rewrite/YouTube.conf
@@ -1,15 +1,11 @@
 # YouTube首页去广告和视频广告-qx(>=iOS15)
-# 搬运@app2smile的脚本和神机的规则进行整合自用
-# app2smile的仓库地址 https://github.com/app2smile/rules，神机不愿被宣传便不写了。
+# 搬运@app2smile的脚本进行整合自用
 
-hostname = -redirector*.googlevideo.com,*.googlevideo.com,www.youtube.com,s.youtube.com,youtubei.googleapis.com
+hostname = -redirector*.googlevideo.com, *.googlevideo.com, youtubei.googleapis.com
 
+# 首页去广告
 ^https:\/\/youtubei\.googleapis\.com\/youtubei\/v1\/browse\? url script-response-body https://raw.githubusercontent.com/app2smile/rules/master/js/youtube.js
 
-(^https?:\/\/[\w-]+\.googlevideo\.com\/(?!dclk_video_ads).+?)&ctier=L(&.+?),ctier,(.+) url 302 $1$2$3
-^https?:\/\/[\w-]+\.googlevideo\.com\/(?!(dclk_video_ads|videoplayback\?)).+&oad url reject
-
-^https?:\/\/youtubei\.googleapis\.com\/youtubei\/v\d\/player\/ad_break url reject
-^https?:\/\/(www|s)\.youtube\.com\/api\/stats\/ads url reject
-^https?:\/\/(www|s)\.youtube\.com\/(pagead|ptracking) url reject
-^https?:\/\/s\.youtube\.com\/api\/stats\/qoe\?adcontext url reject
+# 视频去广告
+^https:\/\/youtubei\.googleapis\.com\/youtubei\/v1\/player url script-response-body https://raw.githubusercontent.com/Maasea/sgmodule/master/Script/Youtube/youtube-player.js
+^https?:\/\/[\w-]+\.googlevideo\.com\/(?!(dclk_video_ads|videoplayback\?)).+&oad url script-request-header https://raw.githubusercontent.com/Maasea/sgmodule/master/Script/Youtube/youtube-fake.js
