--- a/QuantumultX/rewrite/bilibili.conf
+++ b/QuantumultX/rewrite/bilibili.conf
@@ -4,7 +4,7 @@ hostname = app.bilibili.com, grpc.biliapi.net
 ^https?:\/\/app\.bilibili\.com\/x\/resource\/show\/tab url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Script/bilibili_json.js
 # ～ BiliBili_哔哩哔哩_我的页面处理@ddgksf2013
 ^https?:\/\/app\.bilibili\.com\/x\/v2\/account\/mine url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Script/bilibili_json.js
-# ～ BiliBili_热搜发现@ddgksf2013
+# ～ BiliBili_热搜发现@ddgksf2013 https://gitlab.com/ddgksf2013/Cuttlefish
 ^https://app.bilibili.com/x/v2/search/square url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Script/bilibili_json.js
 # > 开屏页广告,推荐页广告,动态(推荐话题和列表广告),视频播放页面(up主推荐广告)
 ^https:\/\/app\.bilibili\.com\/x\/(v2\/(splash\/(list|show)|feed\/index\?)|resource\/show\/tab\/v2) url script-response-body https://raw.githubusercontent.com/app2smile/rules/master/js/bilibili-json.js
