--- a/QuantumultX/rewrite/bilibili.conf
+++ b/QuantumultX/rewrite/bilibili.conf
@@ -1,4 +1,4 @@
-hostname = app.bilibili.com, grpc.biliapi.net
+hostname = app.bilibili.com, api.live.bilibili.com, api.vc.bilibili.com, grpc.biliapi.net
 
 # ～ BiliBili_哔哩哔哩_追番去广告@ddgksf2013
 ^https?:\/\/api\.(bilibili|biliapi)\.(com|net)\/pgc\/page\/bangumi url script-response-body https://gitlab.com/ddgksf2013/Cuttlefish/-/raw/master/Script/bilibili_json.js
